# personas

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  MCP_GOOGLE_SHEETS.md  README.md  VOICE_SESSION_PLAN.md  docker-compose.yml  scratch_sdk.py
app/: __init__.py  config.py  db.py  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 1b5cec53c006_add_conversations_and_messages.py  633bb6dfd897_initial_baseline.py  a1f2c3d4e5f6_add_panels_and_panel_messages.py  b2c3d4e5f6a7_add_assets.py  e84a87a1efe7_add_personas_table.py  eff19a00e7fa_add_memories_table.py
app/api/: analytics.py  assets.py  conversations.py  live_ws.py  panel_ws.py  panels.py  personas.py  voice_ws.py
app/models/: __init__.py  asset.py  conversation.py  memory.py  message.py  panel.py  persona.py
app/schemas/: assets.py  conversations.py  panels.py  personas.py
app/seeds/: personas.py
app/services/: analytics.py  assets.py  documents.py  embeddings.py  export.py  gemini.py  gemini_live.py  memory.py  prompt_builder.py  search.py  summarizer.py
app/services/mcp/: client.py
app/templates/: base.html  chat.html  conversations.html  index.html  panel.html  panels_hub.html  persona_form.html
app/tests/: SMOKE_TESTING_LIVE.md  conftest.py  test_analytics.py  test_assets.py  test_chat.py  test_documents.py  test_export.py  test_health.py  test_live.py  test_live_reconnect.py  test_mcp.py  test_memory.py  test_panel_reconnect.py  test_panel_router.py  test_panel_routing.py  test_panel_session.py  test_panels.py  test_personas.py  test_search.py
app/web/: views.py
(+45 files in other folders)
