[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personas"
version = "0.1.0"
description = "AI Multi-Persona Voice Agent Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlalchemy[mypy]>=2.0.28",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "google-genai>=0.1.1",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "pgvector>=0.2.5",
    "pypdf>=5.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
    "ruff>=0.3.3",
    "black>=24.2.0"
]

[tool.setuptools]
package-dir = {"app" = "."}
packages = ["app"]

[tool.pytest.ini_options]
asyncio_default_test_loop_scope = "session"
asyncio_mode = "auto"
